style updates for events and home

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,11 @@
   max-height: 100vh;
   margin: auto;
 }
+
+.events {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
